changes as of 1/8/16

--- a/Week2work/buttonText/buttoN.html
+++ b/Week2work/buttonText/buttoN.html
@@ -4,16 +4,7 @@
 <title>Change Text With Button Click</title>  
 </head>
 <body >
-
-
-<SCRIPT LANGUAGE="JavaScript">
-
-
-function changeText(txt){
-	document.getElementById('name').innerHTML = txt;
-}
-
-
+<script src= "buttoN.js">
 </script>
 <p>What element represents your devCodeCamp class? <b id='name'>CLICK BUTTON</b>. </p>
 <input type='button' onclick='changeText("Oxygen Class!")' value='Change Text'/>
